versioned_docs/version-4.1/client-api/how-to/content/_handle-document-relationships-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

One of the design principles that RavenDB adheres to is the idea that documents are independent, meaning all data required to process a document is stored within the document itself. However, this doesn't mean there should not be relations between objects.

There are valid scenarios where we need to define relationships between objects. By doing so, we expose ourselves to one major problem: whenever we load the containing entity, we are going to need to load data from the referenced entities as well (unless we are not interested in them). While the alternative of storing the whole entity in every object graph it is referenced in seems cheaper at first, this proves to be quite costly in terms of database resources and network traffic.

RavenDB offers three elegant approaches to solve this problem. Each scenario will need to use one or more of them. When applied correctly, they can drastically improve performance, reduce network bandwidth, and speed up development.

## Denormalization

The easiest solution is to denormalize the data within the containing entity, forcing it to contain the actual value of the referenced entity in addition to (or instead of) the foreign key.

Take this JSON document for example:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`// Order document with ID: orders/1-A
\{
    "Customer": \{
        "Name": "Itamar",
        "Id": "customers/1-A"
    \},
    Items: [
        \{
            "Product": \{
                "Id": "products/1-A",
                "Name": "Milk",
                "Cost": 2.3
            \},
            "Quantity": 3
        \}
    ]
\}
`}
</CodeBlock>
</TabItem>

As you can see, the `Order` document now contains denormalized data from both the `Customer` and the `Product` documents which are saved elsewhere in full. Note we won't have copied all the customer properties into the order; instead we just clone the ones that we care about when displaying or processing an order. This approach is called *denormalized reference*.

The denormalization approach avoids many cross document lookups and results in only the necessary data being transmitted over the network, but it makes other scenarios more difficult. For example, consider the following entity structure as our start point:

<TabItem value="order" label="order">
<CodeBlock language="csharp">
{`public class Order
\{
    public string CustomerId \{ get; set; \}

    public string[] SupplierIds \{ get; set; \}

    public Referral Referral \{ get; set; \}

    public LineItem[] LineItems \{ get; set; \}

    public double TotalPrice \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="customer" label="customer">
<CodeBlock language="csharp">
{`public class Customer
\{
    public string Id \{ get; set; \}

    public string Name \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

If we know that whenever we load an `Order` from the database we will need to know the customer's name and address, we could decide to create a denormalized `Order.Customer` field and store those details directly in the `Order` object. Obviously, the password and other irrelevant details will not be denormalized:

<TabItem value="denormalized_customer" label="denormalized_customer">
<CodeBlock language="csharp">
{`public class DenormalizedCustomer
\{
    public string Id \{ get; set; \}

    public string Name \{ get; set; \}

    public string Address \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

There wouldn't be a direct reference between the `Order` and the `Customer`. Instead, `Order` holds a `DenormalizedCustomer`, which contains the interesting bits from `Customer` that we need whenever we process `Order` objects.

But what happens when the user's address is changed? We will have to perform an aggregate operation to update all orders this customer has made. What if the customer has a lot of orders or changes their address frequently? Keeping these details in sync could become very demanding on the server. What if another process that works with orders needs a different set of customer properties? The `DenormalizedCustomer` will need to be expanded, possibly to the point that the majority of the customer record is cloned.

<Admonition type="info" title="Tip" id="tip" href="#tip">
**Denormalization** is a viable solution for rarely changing data or for data that must remain the same despite the underlying referenced data changing over time.
</Admonition>

## Includes

The **Includes** feature addresses the limitations of denormalization. Instead of one object containing copies of the properties from another object, it is only necessary to hold a reference to the second object. Then the server can be instructed to pre-load the referenced document at the same time that the root object is retrieved. We do this using:

<TabItem value="includes_1_0" label="includes_1_0">
<CodeBlock language="csharp">
{`Order order = session
    .Include<Order>(x => x.CustomerId)
    .Load("orders/1-A");

// this will not require querying the server!
Customer customer = session
    .Load<Customer>(order.CustomerId);
`}
</CodeBlock>
</TabItem>

Above we are asking RavenDB to retrieve the `Order` `orders/1-A`, and at the same time "include" the `Customer` referenced by the `Order.CustomerId` property. The second call to `Load()` is resolved completely client side (i.e. without a second request to the RavenDB server) because the relevant `Customer` object has already been retrieved (this is the full `Customer` object not a denormalized version). 

There is also a possibility to load multiple documents:

<TabItem value="includes_2_0" label="includes_2_0">
<CodeBlock language="csharp">
{`Dictionary<string, Order> orders = session
    .Include<Order>(x => x.CustomerId)
    .Load("orders/1-A", "orders/2-A");

foreach (Order order in orders.Values)
\{
    // this will not require querying the server!
    Customer customer = session.Load<Customer>(order.CustomerId);
\}
`}
</CodeBlock>
</TabItem>

You can also use Includes with queries:

<Tabs groupId='languageSyntax'>
<TabItem value="Query(Embedded)" label="Query(Embedded)">
<CodeBlock language="csharp">
{`IList<Order> orders = session
    .Query<Order>()
    .Include(o => o.CustomerId)
    .Where(x => x.TotalPrice > 100)
    .ToList();

foreach (Order order in orders)
{
    // this will not require querying the server!
    Customer customer = session
        .Load<Customer>(order.CustomerId);
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Query(Builder)" label="Query(Builder)">
<CodeBlock language="csharp">
{`IList<Order> orders = session
    .Query<Order>()
       .Include(i => i
         .IncludeDocuments<Customer>(x => x.CustomerId) //single document
         .IncludeCounter("OrderUpdateCount")) //fluent builder can include counters as well 
    .Where(x => x.TotalPrice > 100)
    .ToList();

foreach (Order order in orders)
{
    // this will not require querying the server!
    Customer customer = session
        .Load<Customer>(order.CustomerId);
}
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`IList<Order> orders = session
    .Advanced
    .DocumentQuery<Order>()
    .Include(x => x.CustomerId)
    .WhereGreaterThan(x => x.TotalPrice, 100)
    .ToList();

foreach (Order order in orders)
{
    // this will not require querying the server!
    Customer customer = session
        .Load<Customer>(order.CustomerId);
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL(Embedded)" label="RQL(Embedded)">
<CodeBlock language="sql">
{`from Orders
where TotalPrice > 100
include CustomerId
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL(Builder)" label="RQL(Builder)">
<CodeBlock language="sql">
{`from Orders as o
where TotalPrice > 100
include CustomerId,counters(o,'OrderUpdateCount')
`}
</CodeBlock>
</TabItem>
</Tabs>

This works because RavenDB has two channels through which it can return information in response to a load request. The first is the Results channel, through which the root object retrieved by the `Load()` method call is returned. The second is the Includes channel, through which any included documents are sent back to the client. Client side, those included documents are not returned from the `Load()` method call, but they are added to the session unit of work, and subsequent requests to load them are served directly from the session cache, without requiring any additional queries to the server.

<Admonition type="note" title="">
Embedded and builder variants of Include clause are essentially syntax sugar and are equivalent at the server side.
</Admonition>

Streaming query results does not support the includes feature. Learn more in 
[How to Stream Query Results](../../../client-api/session/querying/how-to-stream-query-results.mdx).
 
### One to Many Includes

Include can be used with a many to one relationship. In the above classes, an `Order` has a property `SupplierIds` which contains an array of references to `Supplier` documents. The following code will cause the suppliers to be pre-loaded:

<TabItem value="includes_4_0" label="includes_4_0">
<CodeBlock language="csharp">
{`Order order = session
    .Include<Order>(x => x.SupplierIds)
    .Load("orders/1-A");

foreach (string supplierId in order.SupplierIds)
\{
    // this will not require querying the server!
    Supplier supplier = session.Load<Supplier>(supplierId);
\}
`}
</CodeBlock>
</TabItem>

Alternatively, it is possible to use the fluent builder syntax.

<TabItem value="includes_4_0_builder" label="includes_4_0_builder">
<CodeBlock language="csharp">
{`var order = session.Load<Order>(
    "orders/1-A",
    i => i.IncludeDocuments(x => x.SupplierIds));

foreach (string supplierId in order.SupplierIds)
\{
    // this will not require querying the server!
    var supplier = session.Load<Supplier>(supplierId);
\}
`}
</CodeBlock>
</TabItem>

The calls to `Load()` within the `foreach` loop will not require a call to the server as the `Supplier` objects will already be loaded into the session cache.

Multi-loads are also possible:

<TabItem value="includes_5_0" label="includes_5_0">
<CodeBlock language="csharp">
{`Dictionary<string, Order> orders = session
    .Include<Order>(x => x.SupplierIds)
    .Load("orders/1-A", "orders/2-A");

foreach (Order order in orders.Values)
\{
    foreach (string supplierId in order.SupplierIds)
    \{
        // this will not require querying the server!
        Supplier supplier = session.Load<Supplier>(supplierId);
    \}
\}
`}
</CodeBlock>
</TabItem>

### Secondary Level Includes

An Include does not need to work only on the value of a top level property within a document. It can be used to load a value from a secondary level. In the classes above, the `Order` contains a `Referral` property which is of the type:

<TabItem value="referral" label="referral">
<CodeBlock language="csharp">
{`public class Referral
\{
    public string CustomerId \{ get; set; \}

    public double CommissionPercentage \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

This class contains an identifier for a `Customer`. The following code will include the document referenced by that secondary level identifier:

<TabItem value="includes_6_0" label="includes_6_0">
<CodeBlock language="csharp">
{`Order order = session
    .Include<Order>(x => x.Referral.CustomerId)
    .Load("orders/1-A");

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>

It is possible to execute the same code with the fluent builder syntax:

<TabItem value="includes_6_0_builder" label="includes_6_0_builder">
<CodeBlock language="csharp">
{`var order = session.Load<Order>(
    "orders/1-A", 
    i => i.IncludeDocuments(x => x.Referral.CustomerId));

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>


The alternative way is to provide a string-based path:

<TabItem value="includes_6_2" label="includes_6_2">
<CodeBlock language="csharp">
{`Order order = session.Include("Referral.CustomerId")
    .Load<Order>("orders/1-A");

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>

With the fluent builder syntax, it is also possible to use a string-based path:

<TabItem value="includes_6_2_builder" label="includes_6_2_builder">
<CodeBlock language="csharp">
{`var order = session.Load<Order>(
    "orders/1-A", 
    i => i.IncludeDocuments("Referral.CustomerId"));

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>

This secondary level include will also work with collections. The `Order.LineItems` property holds a collection of `LineItem` objects which each contain a reference to a `Product`:

<TabItem value="line_item" label="line_item">
<CodeBlock language="csharp">
{`public class LineItem
\{
    public string ProductId \{ get; set; \}

    public string Name \{ get; set; \}

    public int Quantity \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

The `Product` documents can be included using the following syntax:

<TabItem value="includes_7_0" label="includes_7_0">
<CodeBlock language="csharp">
{`Order order = session
    .Include<Order>(x => x.LineItems.Select(l => l.ProductId))
    .Load("orders/1-A");

foreach (LineItem lineItem in order.LineItems)
\{
    // this will not require querying the server!
    Product product = session.Load<Product>(lineItem.ProductId);
\}
`}
</CodeBlock>
</TabItem>

The fluent builder syntax works here too.

<TabItem value="includes_7_0_builder" label="includes_7_0_builder">
<CodeBlock language="csharp">
{`var order = session.Load<Order>(
    "orders/1-A",
    i => i.IncludeDocuments(x => x.LineItems.Select(l => l.ProductId)));

foreach (LineItem lineItem in order.LineItems)
\{
    // this will not require querying the server!
    Product product = session.Load<Product>(lineItem.ProductId);
\}
`}
</CodeBlock>
</TabItem>

when you want to load multiple documents.

The `Select()` within the Include tells RavenDB which property of secondary level objects to use as a reference.

<Admonition type="warning" title="">
### `string`&nbsp;Path Conventions

When using string-based includes like:

<TabItem value="includes_6_0" label="includes_6_0">
<CodeBlock language="csharp">
{`Order order = session
    .Include<Order>(x => x.Referral.CustomerId)
    .Load("orders/1-A");

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>

you must remember to follow certain rules that must apply to the provided string path:

1.	**Dots** are used to separate properties e.g. `"Referral.CustomerId"` in the example above means that our `Order` contains property `Referral` and that property contains another property called `CustomerId`.
2.	**Indexer operator** is used to indicate that property is a collection type. So if our `Order` has a list of LineItems and each `LineItem` contains a `ProductId` property, then we can create string path as follows: `"LineItems[].ProductId"`.
3.	**Prefixes** can be used to indicate the prefix of the identifier of the document that is going to be included. It can be useful when working with custom or semantic identifiers. For example, if you have a customer stored under `customers/login@domain.com` then you can include it using `"Referral.CustomerEmail(customers/)"` (`customers/` is the prefix here).

Learning string path rules may be useful when you will want to query database using HTTP API.

<TabItem value="json" label="json">
<CodeBlock language="json">
{`curl -X GET "http://localhost:8080/databases/Northwind/docs?id=orders/1-A&include=Lines[].Product"
`}
</CodeBlock>
</TabItem>

</Admonition>

### Dictionary Includes

Dictionary keys and values can also be used when doing includes. Consider following scenario:

<TabItem value="person_1" label="person_1">
<CodeBlock language="csharp">
{`public class Person
\{
    public string Id \{ get; set; \}

    public string Name \{ get; set; \}

    public Dictionary<string, string> Attributes \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="includes_10_0" label="includes_10_0">
<CodeBlock language="csharp">
{`session.Store(
    new Person
    \{
        Id = "people/1-A",
        Name = "John Doe",
        Attributes = new Dictionary<string, string>
        \{
            \{ "Mother", "people/2" \},
            \{ "Father", "people/3" \}
        \}
    \});

session.Store(
    new Person
    \{
        Id = "people/2",
        Name = "Helen Doe",
        Attributes = new Dictionary<string, string>()
    \});

session.Store(
    new Person
    \{
        Id = "people/3",
        Name = "George Doe",
        Attributes = new Dictionary<string, string>()
    \});
`}
</CodeBlock>
</TabItem>

Now we want to include all documents that are under dictionary values:

<TabItem value="includes_10_1" label="includes_10_1">
<CodeBlock language="csharp">
{`var person = session
    .Include<Person>(x => x.Attributes.Values)
    .Load("people/1-A");

var mother = session
    .Load<Person>(person.Attributes["Mother"]);

var father = session
    .Load<Person>(person.Attributes["Father"]);

Assert.Equal(1, session.Advanced.NumberOfRequests);
`}
</CodeBlock>
</TabItem>

The code above can be also rewritten with fluent builder syntax:

<TabItem value="includes_10_1_builder" label="includes_10_1_builder">
<CodeBlock language="csharp">
{`var person = session.Load<Person>(
    "people/1-A",
    i => i.IncludeDocuments<Person>(x => x.Attributes.Values));

var mother = session
    .Load<Person>(person.Attributes["Mother"]);

var father = session
    .Load<Person>(person.Attributes["Father"]);

Assert.Equal(1, session.Advanced.NumberOfRequests);
`}
</CodeBlock>
</TabItem>

You can also include values from dictionary keys:

<TabItem value="includes_10_3" label="includes_10_3">
<CodeBlock language="csharp">
{`var person = session
    .Include<Person>(x => x.Attributes.Keys)
    .Load("people/1-A");
`}
</CodeBlock>
</TabItem>

Here, as well, this can be written with fluent builder syntax:

<TabItem value="includes_10_3_builder" label="includes_10_3_builder">
<CodeBlock language="csharp">
{`var person = session                        
    .Load<Person>("people/1-A",
     i => i.IncludeDocuments<Person>(x => x.Attributes.Keys));
`}
</CodeBlock>
</TabItem>

#### Complex Types

If values in dictionary are more complex e.g.

<TabItem value="person_2" label="person_2">
<CodeBlock language="csharp">
{`public class PersonWithAttribute
\{
    public string Id \{ get; set; \}

    public string Name \{ get; set; \}

    public Dictionary<string, Attribute> Attributes \{ get; set; \}
\}

public class Attribute
\{
    public string Ref \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="includes_11_0" label="includes_11_0">
<CodeBlock language="csharp">
{`session.Store(
    new PersonWithAttribute
    \{
        Id = "people/1-A",
        Name = "John Doe",
        Attributes = new Dictionary<string, Attribute>
        \{
            \{ "Mother", new Attribute \{ Ref = "people/2" \} \},
            \{ "Father", new Attribute \{ Ref = "people/3" \} \}
        \}
    \});

session.Store(
    new Person
    \{
        Id = "people/2",
        Name = "Helen Doe",
        Attributes = new Dictionary<string, string>()
    \});

session.Store(
    new Person
    \{
        Id = "people/3",
        Name = "George Doe",
        Attributes = new Dictionary<string, string>()
    \});
`}
</CodeBlock>
</TabItem>

We can also do includes on specific properties:

<TabItem value="includes_11_1" label="includes_11_1">
<CodeBlock language="csharp">
{`var person = session
    .Include<PersonWithAttribute>(x => x.Attributes.Values.Select(v => v.Ref))
    .Load("people/1-A");

var mother = session
    .Load<Person>(person.Attributes["Mother"].Ref);

var father = session
    .Load<Person>(person.Attributes["Father"].Ref);

Assert.Equal(1, session.Advanced.NumberOfRequests);
`}
</CodeBlock>
</TabItem>

## Combining Approaches

It is possible to combine the above techniques. Using the `DenormalizedCustomer` from above and creating an order that uses it:

<TabItem value="order_3" label="order_3">
<CodeBlock language="csharp">
{`public class Order3
\{
    public DenormalizedCustomer Customer \{ get; set; \}

    public string[] SupplierIds \{ get; set; \}

    public Referral Referral \{ get; set; \}

    public LineItem[] LineItems \{ get; set; \}

    public double TotalPrice \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

We have the advantages of a denormalization, a quick and simple load of an `Order`, and the fairly static `Customer` details that are required for most processing. But we also have the ability to easily and efficiently load the full `Customer` object when necessary using:

<TabItem value="includes_9_0" label="includes_9_0">
<CodeBlock language="csharp">
{`Order3 order = session
    .Include<Order3, Customer>(x => x.Customer.Id)
    .Load("orders/1-A");

// this will not require querying the server!
Customer customer = session.Load<Customer>(order.Customer.Id);
`}
</CodeBlock>
</TabItem>

This combining of denormalization and Includes could also be used with a list of denormalized objects.

It is possible to use Include on a query being a projection. Includes are evaluated after the projection has been evaluated. This opens up the possibility of implementing Tertiary Includes (i.e. retrieving documents that are referenced by documents that are referenced by the root document). 

RavenDB can support Tertiary Includes, but before resorting to them you should re-evaluate your document model. Needing Tertiary Includes can be an indication that you are designing your documents along "Relational" lines.

## Summary

There are no strict rules as to when to use which approach, but the general idea is to give it a lot of thought and consider the implications each approach has.

As an example, in an e-commerce application it might be better to denormalize product names and prices into an order line object since you want to make sure the customer sees the same price and product title in the order history. But the customer name and addresses should probably be references rather than denormalized into the order entity.

For most cases where denormalization is not an option, Includes are probably the answer.


